syntax = "proto3";

message Move {
  bool isMoving = 1;
  uint32 direction = 2;
  double x = 3;
  double y = 4;
  double whenMovingHasChanged = 5;
}
